...
        viewModel.loadHabits(context)
    }

    Column(
        modifier = Modifier
            .fillMaxSize()
            .testTag("SecondScreenBox")
            .padding(16.dp)
    ) {
        // Кнопка "Назад"
        Button(
            onClick = onBackToSplash,
            modifier = Modifier
                .align(Alignment.Start)
                .padding(bottom = 16.dp)
        ) {
...
