...
                colors = ButtonDefaults.buttonColors(
                    backgroundColor = Color.Blue,
                    contentColor = Color.White
                ),
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("CreateHabitButton")
            ) {
                Text("Создать привычку")
            }

            Spacer(modifier = Modifier.height(8.dp))

...
